# bushfire_sentinel

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  USER_GUIDE.md  package-lock.json  package.json  render.yaml  start-backend.bat  start-dev.ps1  start-frontend.bat  turbo.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
apps/backend/: package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/middleware/: auth.ts
apps/backend/src/models/: Alert.ts  Detection.ts  Drone.ts  Geofence.ts  Subscriber.ts  User.ts
apps/frontend/: index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  theme.ts
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  USER_GUIDE.md
ml_models/: .gitignore  LICENSE  README.md  env.example  pyproject.toml
ml_models/configs/: fire_smoke.yaml
ml_models/docs/: ARCHITECTURE.md  CAMARA_INTEGRATION.md  TRAINING.md
ml_models/models/: MODEL.md
ml_models/scripts/: train_fire_detector.py
ml_models/src/bushfire_ai/: __init__.py  main.py
ml_models/src/bushfire_ai/config/: __init__.py  settings.py
ml_models/src/bushfire_ai/detector/: __init__.py  fire_detector.py
ml_models/src/bushfire_ai/integrations/: __init__.py  camara_client.py  camara_reporter.py
ml_models/src/bushfire_ai/pipeline/: __init__.py  event_accumulator.py  orchestrator.py  video_source.py
ml_models/src/bushfire_ai/storage/: __init__.py  local_store.py
ml_models/src/bushfire_ai/utils/: __init__.py  logging.py
ml_models/tests/: test_settings.py
ml_models/videos/: CREDITS.md
(+26 files in other folders)
